# src/docs/swagger.yaml
@@ -14,8 +14,6 @@ definitions:
         type: integer
       id_book:
         type: string
-      image_file:
-        type: string
       place:
         type: string
       tag:
@@ -66,6 +64,8 @@ definitions:
   model.Product:
     properties:
       categories:
+        description: Image_file   string     `db:"image_file" json:"image_file,omitempty"
+          valid:"-" `
         type: string
       created_at:
         type: string
@@ -73,15 +73,12 @@ definitions:
         type: string
       id_product:
         type: string
-      image_file:
-        type: string
       isfavorite:
-        type: string
+        type: boolean
       price:
+        description: Status       string `db:"status" form:"status" json:"status"`
         type: integer
       product_name:
-        type: string
-      status:
         type: string
       updated_at:
         type: string
